# desafio-insight

./: .gitignore  README.md  poetry.toml  pyproject.toml
src/app/: main.py
src/app/factories/: ibge.py
src/app/ibge_client/: __init__.py  base.py  localidades.py  nomes.py
src/app/models/: __init__.py  ibge.py  localidades.py  nomes.py
src/app/routes/: ibge.py  localidades.py  nomes.py
src/app/services/: ibge.py
src/app/utils/: enums.py  errors.py  ibge_client.py  types.py
