[tool.poetry]
name = "desafio"
version = "0.1.0"
description = ""
authors = ["Caio Oliveira <cfoviana@alu.ufc.br>"]
readme = "README.md"
packages = [
    { include = "app/*", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
